Bug 474234 - Cannot edit seat / coach / class
Summary: Cannot edit seat / coach / class
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-06 17:10 UTC by Manuel Amador (Rudd-O)
Modified: 2023-09-07 15:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Amador (Rudd-O) 2023-09-06 17:10:16 UTC
Attempting to edit a train trip's coach / seat / class fields does nothing — the blue Save button (with the floppy) at the bottom of the screen blinks when tapped, but nothing happens, and going back to the previous screen shows nothing has been saved.
Comment 1 Volker Krause 2023-09-07 15:35:41 UTC
Git commit 8ac9954a07f7d18b86b5927c74b3172a45a1d78f by Volker Krause.
Committed on 07/09/2023 at 17:35.
Pushed by vkrause into branch 'release/23.08'.

Fix editing bus and train elements without an associated ticket object
FIXED-IN: 23.08.1

M  +3    -4    src/app/BusEditor.qml
M  +1    -1    src/app/BusPage.qml
M  +2    -3    src/app/TrainEditor.qml
M  +6    -0    src/app/factory.cpp
M  +1    -0    src/app/factory.h

https://invent.kde.org/pim/itinerary/-/commit/8ac9954a07f7d18b86b5927c74b3172a45a1d78f