Fix editing bus and train elements without an associated ticket object

BUG: 474234
FIXED-IN: 23.08.1